--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="home" class="Navigation-menu">
         <ul>
             <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#projects">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
             <li style="float:right"><a class="active" href="#home">HOME</a></li>
           </ul>
