Minor Text Adds
Additional content

--- a/index.html
+++ b/index.html
@@ -24,7 +24,27 @@
 
       <div id="about">
      <h1 id="about1">About</h1> 
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
      <p>Hi, I'm Jakub, a front end developer with a passion for blockchain and innovation, currently working as a freelancer. I create custom front ends, implement design mock-ups, and trade cryptos in my spare time!</p>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <p>I  primarily work with front end technologies including HTML5, CSS3, Javascript, React, etc and recently have gotten into TypeScript. I believe in writing clean and modular code with appropiate comments in order to ensure high readability. Generally speaking, I have a good understanding of the entire web development process from development to deployment.</p>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <br>
+     <p id="para-3">What initially got me into development was an interest in cybersecurity, and the ability to create secure, unbreachable web apps.</p>
       </div>
       
       <div id="projects">
