--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <nav>
@@ -95,9 +96,11 @@
 
       <div id="contact">
       <h1 id="contact1">Get in touch</h1>
-     
+      <p><i class="fa fa-envelope"></i></a>coderushh@gmail.com</p>
+      <p>Or</p>
+      <p><i class="fa fa-envelope"></i></a>jkuba1275@gmail.com</p>
       </div>
-
+      <div id="copyright">Copyright 2020 codeRUSH1<p></p></div>
 <script src="js/main.js"></script>
 </body>
 </html>
