--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
 
       <div id="contact">
       <h1 id="contact1">Get in touch</h1>
-      <p><i class="fa fa-envelope"></i></a>coderushh@gmail.com</p>
+      <p><i class="fa fa-envelope"></i>coderushh@gmail.com</p>
       <p>Or</p>
-      <p><i class="fa fa-envelope"></i></a>jkuba1275@gmail.com</p>
+      <p><i class="fa fa-envelope"></i>jkuba1275@gmail.com</p>
       </div>
-      <div id="copyright">Copyright 2020 codeRUSH1<p></p></div>
+      <div id="copyright"><p>Copyright 2020 codeRUSH1</p></div>
 <script src="js/main.js"></script>
 </body>
 </html>
