--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      <br>
      <br>
      <br>
-     <p>Hi, I'm Jakub, a front end developer with a passion for blockchain and innovation, currently working as a freelancer. I create custom front ends, implement design mock-ups, and trade cryptos in my spare time!</p>
+     <p>Hi, I'm LoneWolf, a front end developer with a passion for blockchain and innovation, currently working as a freelancer. I create custom front ends, implement design mock-ups, and trade cryptos in my spare time!</p>
      <br>
      <br>
      <br>
@@ -96,11 +96,11 @@
 
       <div id="contact">
       <h1 id="contact1">Get in touch</h1>
-      <p><i class="fa fa-envelope"></i>coderushh@gmail.com</p>
+      <p><i class="fa fa-envelope"></i>LoneWolf@gmail.com</p>
       <p>Or</p>
-      <p><i class="fa fa-envelope"></i>jkuba1275@gmail.com</p>
+      <p><i class="fa fa-envelope"></i>LoneWolf@gmail.com</p>
       </div>
-      <div id="copyright"><p>Copyright 2020 codeRUSH1</p></div>
+      <div id="copyright"><p>Copyright 2020 LoneWolf</p></div>
 <script src="js/main.js"></script>
 </body>
 </html>
