--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      <br>
      <br>
      <br>
-     <p>Hi, I'm CodeRush, a front end developer with a passion for blockchain and innovation, currently working as a freelancer. I create custom front ends, implement design mock-ups, and trade cryptos in my spare time!</p>
+     <p>Hi, I'm Jakub, a front end developer with a passion for blockchain and innovation, currently working as a freelancer. I create custom front ends, implement design mock-ups, and trade cryptos in my spare time!</p>
      <br>
      <br>
      <br>
